# frozen-core-commit

./: LICENSE  README.md  pyproject.toml
benchmarks/: bench_cryptanalysis.py  bench_seed_compression.py  bench_separation.py
fci_commit/: __init__.py  commit.py  keygen.py  sign.py  verify.py
paper/: frozen-core-paper-v06.tex  frozen-core-paper-v5f.tex
tests/: test_scheme.py
