[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fci-commit"
version = "0.1.0"
description = "Post-quantum commitment and signature schemes from planted k-SAT frozen-core isolation"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "John Rhodes"}]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
bench = ["python-sat>=1.8"]

[tool.setuptools.packages.find]
include = ["fci_commit*"]
